partie formation supplementaires

--- a/templates/etdCr.html.twig
+++ b/templates/etdCr.html.twig
@@ -39,7 +39,7 @@
     <ul>
         <li><a   href="{{url('etud')}}"> Accueil</a></li>
         <li><a href="{{url('cours',{'typ':'All'})}}">Cours</a></li>
-        <li><a href="#">Mes cours</a></li>
+        <li><a href="{{url('mescours')}}">Mes cours</a></li>
         <li><a href="{{url('fav')}}">Favoris</a></li>
     </ul>
     <div class="block">
