--- a/templates/main/acceuil.html.twig
+++ b/templates/main/acceuil.html.twig
@@ -100,7 +100,7 @@
                         <div class="txx">
                             <center><h3>Quelques feedback de nous etudiant</h3></center>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, dolor. Cras el non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. </p>
-                            <button type="button" class="btn btn-secondary"><a style="text-decoration: none; color: beige;" href="#">voir plus</a> </button>
+                            <button type="button" class="btn btn-secondary"><a style="text-decoration: none; color: beige;" href="{{url('aide')}}">voir plus</a> </button>
                             <div  style=" width: 100%;
                             display: flex;
                             justify-content: flex-end;"><img style="width: 240px; height: 150px; background-color: transparent;" src="assets/image/fed2.png" alt=""></div>
