--- a/templates/main/mainFS.html.twig
+++ b/templates/main/mainFS.html.twig
@@ -24,8 +24,8 @@
                     <div class="containe">
                         <div class="asidb">
                             <nav class="asid">
-                                <div class="actv"><a class="nav-link" href="#">Accueil</a></div>
-                                <div><a class="nav-link" href="#">Mes cours</a></div>
+                                <div class="actv"><a class="nav-link" href="{{url('etud')}}">Accueil</a></div>
+                                <div><a class="nav-link" href="{{url('mescours')}}">Mes cours</a></div>
                                 <div><a class="nav-link" href="{{path('fav')}}">Favoris</a></div>
                                 <div><a class="nav-link" href="#">Modifier le profile</a></div>
                                 <div><a class="nav-link" href="#">Modifier le mot de passe</a></div>
