--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -74,7 +74,7 @@
                 </ul>
             </div>
         </li>
-        <li><a href="#">Aide</a></li>
+        <li><a href="{{url('aide')}}">Aide</a></li>
     </ul>
     <div class="block">
         <i class="fa fa-bell" ></i>
