partie formation supplémentaires

--- a/templates/main/acceuil.html.twig
+++ b/templates/main/acceuil.html.twig
@@ -28,7 +28,7 @@
                 <div class="cont">
                     <div class="hello">
                         <div class="txx">
-                            <div class="tit">Bienvenue User,</div>
+                            <div class="tit">Bienvenue {{user[0].nom}} {{user[0].prenom}},</div>
                             <p>nous sommes trés heureux que vous etiez ici,
                                     nous espirons que vous trouverez vos attentes et atteindrez vos objectifs ...</p>
                         </div>
