--- a/templates/main/aide.html.twig
+++ b/templates/main/aide.html.twig
@@ -43,7 +43,7 @@
                             </form>
                             <button class="collapsible btnj">commentaire</button>
                         </div>
-                        <div class="content">
+                        <div class="content" style="margin-bottom: 10px;">
                             {% for c in comnt %}
                                {% if c.postId==p.id %}
                                 
