--- a/templates/main/enter.html.twig
+++ b/templates/main/enter.html.twig
@@ -21,15 +21,16 @@
         </div>
                 <div class="main" style="overflow-y: scroll;" id="main">
                     
-                    
+                    {% include "nav.html.twig" %}
 
                     <div class="contain" >
                        <div class="text">
                         <h2 >Postuler en tant que formateur</h2>
                          <p style="width: 80%; margin: auto;">
                             Satisfied conveying a dependent contented he gentleman agreeable do be. Delivered dejection necessary objection do Mr prevailed. Mr feeling does chiefly cordial in do.
-                            <br><button type="button" style="border-radius: 25px;margin-top: 20px;" class="btn btn-secondary">Postuler</button>
+                            <br><form action="" method="post"><button type="submit" value="ok" name="ok" style="border-radius: 25px;margin-top: 20px;" class="btn btn-secondary">Postuler</button></form>
                         </p>
+        
                          
                        </div>
                        <img src="assets/image/aa.png" alt="">
